fixed workflows on mobile

--- a/sass/partials/_foundation.scss
+++ b/sass/partials/_foundation.scss
@@ -1076,6 +1076,12 @@ address {
       }
     }
   }
+
+  .tab {
+    .stat {
+      font-size: 2.8em;;
+    }
+  }
 }
 @media screen and (min-width: 300px) and (max-width: 600px) {
   body {
